<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="@dimen/old_ppp_dialog_margin_top" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="27.0sp" android:textColor="@color/ppp_title_text_color" android:gravity="center" android:id="@id/ppp_delegate_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ppp_delegate_title" android:fontFamily="@font/newsec700bold" android:layout_marginHorizontal="@dimen/ppp_text_layout_margin_horizontal" />
    <TextView android:textSize="@dimen/ppp_body_text_size" android:textColor="@color/ppp_content_text_color" android:gravity="start" android:id="@id/ppp_delegate_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ppp_text_layout_margin_top" android:text="@string/ppp_delegate_description" android:layout_below="@id/ppp_delegate_title" android:fontFamily="@font/newsec400regular" android:layout_marginHorizontal="@dimen/ppp_text_layout_margin_horizontal" />
    <ImageView android:id="@id/ppp_delegate_image" android:layout_width="fill_parent" android:layout_height="254.0dip" android:layout_marginTop="60.0dip" android:src="@drawable/lockscreen" android:layout_below="@id/ppp_delegate_description" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ppp_delegate_button_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:layout_alignParentBottom="true" android:paddingHorizontal="20.0dip">
        <Button android:textSize="17.0dip" android:textColor="@color/ppp_bottom_bar_text_color" android:gravity="center" android:id="@id/cancel" android:background="@drawable/ppp_delegate_button_background" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/menu_cancel" android:layout_weight="1.0" android:fontFamily="@font/newsec600semibold" android:backgroundTint="#0f000000" android:layout_marginHorizontal="4.0dip" />
        <Button android:textSize="17.0dip" android:textColor="@color/ppp_bottom_bar_text_white_color" android:gravity="center" android:id="@id/next" android:background="@drawable/ppp_delegate_button_background" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/next" android:layout_weight="1.0" android:fontFamily="@font/newsec600semibold" android:backgroundTint="#ff387aff" android:layout_marginHorizontal="4.0dip" />
    </LinearLayout>
</RelativeLayout>
