<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/security_device_list_item_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginHorizontal="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/security_status_list_item" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="18.0dip" android:paddingEnd="22.0dip">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="19.0dip">
            <ImageView android:id="@id/device_image" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_alignParentStart="true" />
            <TextView android:textSize="17.0sp" android:textColor="@color/theme_security_device_name_text_color" android:id="@id/marketing_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:fontFamily="@font/newsec400regular" android:layout_marginStart="16.0px" android:layout_toEndOf="@id/device_image" />
            <ImageView android:id="@id/security_status" android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/list_status_green_small_light" android:layout_centerVertical="true" android:layout_marginEnd="2.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView android:textSize="15.0sp" android:textColor="@color/security_status_title_text_color" android:id="@id/secure_status_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_threats_found" android:fontFamily="@font/newsec600semibold" />
        <TextView android:textSize="14.0sp" android:textColor="@color/security_status_description_text_color" android:id="@id/secure_status_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="To protect your device, install a genuine software, or delete this device in SmartThings App." android:fontFamily="@font/newsec400regular" />
        <LinearLayout android:orientation="vertical" android:id="@id/care_status_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="@color/security_status_title_text_color" android:id="@id/detected_unauthorized_software_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unauthorized_software_detected" android:fontFamily="@font/newsec600semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/security_status_description_text_color" android:id="@id/detected_unauthorized_software_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="20.0dip" android:text="@string/unauthorized_software_detected_description_this_phone" android:fontFamily="@font/newsec400regular" />
            <TextView android:textSize="15.0sp" android:textColor="@color/security_status_title_text_color" android:id="@id/activated_oem_unlock_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="@font/newsec600semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/security_status_description_text_color" android:id="@id/activated_oem_unlock_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="20.0dip" android:fontFamily="@font/newsec400regular" />
            <TextView android:textSize="15.0sp" android:textColor="@color/security_status_title_text_color" android:id="@id/no_updated_security_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/security_status_not_up_to_date" android:fontFamily="@font/newsec600semibold" />
            <TextView android:textSize="14.0sp" android:textColor="@color/security_status_description_text_color" android:id="@id/no_updated_security_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/security_status_not_up_to_date_description_phone" android:fontFamily="@font/newsec400regular" />
            <Button android:textColor="@color/theme_security_status_button_text_color" android:id="@id/sign_out_btn" android:background="@color/theme_security_status_button_bg_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/go_to_sign_out" android:fontFamily="@font/newsec600semibold" android:layout_marginHorizontal="20.0dip" />
            <Button android:textColor="@color/theme_security_status_button_text_color" android:id="@id/developer_option_btn" android:background="@color/theme_security_status_button_bg_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/go_to_developer_options" android:fontFamily="@font/newsec600semibold" android:layout_marginHorizontal="20.0dip" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/security_device_list_sub_header_color" android:id="@id/sub_header" android:background="@color/security_device_list_background" android:paddingTop="13.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="@font/newsec600semibold" android:paddingStart="18.0dip" />
    <TextView android:textAppearance="?textAppearanceListItem" android:textSize="20.0sp" android:gravity="center" android:id="@id/more_device_menu" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="more device" android:paddingVertical="20.0dip" />
</RelativeLayout>
