<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:ellipsize="end" android:id="@id/title" android:paddingTop="@dimen/sesl_dialog_title_padding_top" android:paddingBottom="@dimen/sesl_dialog_title_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_dialog_title" android:maxLines="1" android:paddingHorizontal="@dimen/sesl_dialog_padding_horizontal" style="?android:windowTitleStyle" />
    <androidx.core.widget.NestedScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/scrollView" android:paddingBottom="@dimen/sesl_dialog_body_text_padding_bottom" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:paddingStart="@dimen/sesl_dialog_body_text_scroll_padding_start" android:paddingEnd="@dimen/sesl_dialog_body_text_scroll_padding_end">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete_dialog_message" android:lineSpacingExtra="@dimen/sesl_dialog_body_text_line_spacing_extra" android:textAlignment="viewStart" android:layout_marginStart="@dimen/sesl_dialog_body_text_margin_start" android:layout_marginEnd="@dimen/sesl_dialog_body_text_margin_end" style="?android:textAppearance" />
            <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" layout="@layout/ppp_dialog_description_view" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/buttonBarLayout" android:paddingBottom="@dimen/sesl_dialog_button_bar_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="locale" android:paddingStart="@dimen/sesl_dialog_button_bar_padding_horizontal" android:paddingEnd="@dimen/sesl_dialog_button_bar_padding_horizontal" style="?buttonBarStyle">
        <android.widget.Button android:textColor="@color/ppp_custom_button_color" android:id="@id/sign_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skip" android:layout_weight="1.0" android:paddingVertical="@dimen/ppp_dialog_button_padding_vertical" style="?buttonBarNegativeButtonStyle" />
        <android.widget.Button android:textColor="@color/ppp_custom_button_color" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ppp_dialog_button_padding_vertical" android:text="@string/menu_cancel" android:layout_weight="1.0" android:paddingVertical="@dimen/ppp_dialog_button_padding_vertical" style="?buttonBarPositiveButtonStyle" />
    </LinearLayout>
</LinearLayout>
