<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/app_bar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:expanded="false">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsing_toolbar" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_scrollFlags="scroll|exitUntilCollapsed" app:title="@string/security_status_of_your_devices" style="@style/collapsing_toolbar_day_night">
            <androidx.appcompat.widget.Toolbar android:theme="@style/Theme.AppCompat.DayNight" android:layout_gravity="bottom" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:title="@string/security_status_of_your_devices" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:background="@color/security_device_list_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/security_devices_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="14.0sp" android:textColor="@color/security_device_list_description_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/security_status_main_description" android:fontFamily="@font/newsec400regular" android:paddingHorizontal="28.0dip" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/security_devices_recyclerview" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <View android:id="@id/round_corner" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
